[Joey] [IndoorFarmMonitoring] - Added .gitignore - Changed the configuration setting to be stored in environment file instead of appsettings.json

--- a/IndoorFarmMonitoring/IndoorFarmMonitoring/appsettings.json
+++ b/IndoorFarmMonitoring/IndoorFarmMonitoring/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  "StorageType": "InMemory",
+  "JsonFilePath": "plant_data.json",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=IndoorFarmDb;Username=postgres;Password=P@ssw0rd1234"
-  },
-  "StorageType": "PostgreSQL",
-  "JsonFilePath": "plant_data.json"
+    "_Comment": "Set POSTGRES_CONNECTION_STRING in environment file"
+  }
 }
